# utility-tool-project

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
corpus-logistics-supply-chain/: 203953709-Handfield-Supply-Chain-Redesign.md  270003607-Introduction-to-Forecasting-and-Demand-Planning.md  272156408-Warehousing-and-Inventory-Management.md  275257364-Air-Cargo-Basics.md  312523353-The-Definitive-Guide-to-Inventory-Management.md  357328650-New-Perpetual-Inventory-System.md  359658782-Logistics-and-Supply-Chain-Innovation-Bridging-the-Gap-Between-Theory-and-Practice-pdf.md  376190909-Distribution-Planning-and-Control-Managing-in-the-Era-of-Supply-Chain-Management-pdf.md  388680268-294270821-Demand-forecasting-for-Inventory-control-pdf.md  397340547-supply-chain.md  402402904-Best-Practice-in-Inventory-Management-Oliver-Wight-Manufacturing-pdf.md  470379145-LEAN-Supply-Chain-Planning-The-New-Supply-Chain-Management-Paradigm-for-Process-Industries-to-Master-Today-s-VUCA-World-pdf.md  474669327-Foundations-of-Inventory-Management.md  479665818-Total-SupplyChain-Man-pdf.md  497915534-Supply-Chain-Optimization-Through-Segmentation-and-Analytics-PDFDrive.md  509390811-Supply-Chain-Manager-s-Handbook-JSI.md  600883366-Logistics-and-Supply-Chain-Management.md  640215849-Inventory-Optimization-Dinesh-K-Sharma-Madhu-Jain-Data-Analytics-and-Artificial-Intelligence-for-Inventory-and-Supply-Chain-Management-Springer.md  sourced-reference-data-2026-07-02.md
data/: README.md
docs/: CORPUS_DESIGN.md  DEVELOPMENT_PLAN.md  GOOGLE_CONNECTIONS.md  (+8 more)
(+288 files in other folders)
