[project]
name = "operations-utility-toolkit"
version = "0.1.0"
description = "Corpus tooling and planning scaffold for logistics, inventory, freight, and operations utility calculators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "qdrant-client>=1.14.2",
  "google-api-python-client>=2.160.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "jsonschema>=4.26.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
